8166414: Scene returns incorrect coordinates

Reviewed-by: ddhill, kcr